File browser window closes after hitting esc after render #46229

Closed
opened 2015-09-23 23:41:29 +02:00 by Aaron Carlisle · 11 comments
Member

System Information
Windows 8.0
Intel HD 4600

Blender Version
Broken: 034cc85

Short description of error
When rending/image editor replaces a file browser window the file browser closes after hitting esc

Exact steps for others to reproduce the error
render scene hit escape

Render_screen_bug.blend

**System Information** Windows 8.0 Intel HD 4600 **Blender Version** Broken: 034cc85 **Short description of error** When rending/image editor replaces a file browser window the file browser closes after hitting esc **Exact steps for others to reproduce the error** render scene hit escape [Render_screen_bug.blend](https://archive.blender.org/developer/F238364/Render_screen_bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscribers: @JulianEisel, @Sergey

Added subscribers: @JulianEisel, @Sergey
Julian Eisel was assigned by Sergey Sharybin 2015-09-24 10:19:04 +02:00

@JulianEisel, this isn't a new issue in fact, but thought you'll be interested to look into since you've done some work in related area already :)

@JulianEisel, this isn't a new issue in fact, but thought you'll be interested to look into since you've done some work in related area already :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Tested with 034cc85, cant redo,
render window never replaces file selector for me, its always rendering over the nodes space.

Tested with 034cc85, cant redo, render window never replaces file selector for me, its always rendering over the nodes space.
Author
Member

well that's the same version so either it is os related or the .blend got messed up from its error state upon saving

well that's the same version so either it is os related or the .blend got messed up from its error state upon saving

@ideasman42, it depends on resolution and such i think. You can easily resize node space to make it smaller and hence increase eisze of file browser so rendering will choose screen area which corresponds to the file browser.

@ideasman42, it depends on resolution and such i think. You can easily resize node space to make it smaller and hence increase eisze of file browser so rendering will choose screen area which corresponds to the file browser.
Member

I know about this issue for quite some time already (think since initial 'stacked fullscreen support' commit) and have looked into it a couple of times already. Not easy to solve I'm afraid, giving it another go but it might end up as a limitation.

I know about this issue for quite some time already (think since initial 'stacked fullscreen support' commit) and have looked into it a couple of times already. Not easy to solve I'm afraid, giving it another go but it might end up as a limitation.

This issue was referenced by e61588c5a5

This issue was referenced by e61588c5a5446fe8b0d7c974c7619268d5900031
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46229
No description provided.